Fixed ScrollBar Collides

--- a/res/css/views/dialogs/_AddExistingToSpaceDialog.pcss
+++ b/res/css/views/dialogs/_AddExistingToSpaceDialog.pcss
@@ -248,5 +248,6 @@ limitations under the License.
 
     .mx_Checkbox {
         align-items: center;
+        margin-right: 3%; 
     }
 }
